--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -11,6 +11,8 @@
     text-transform: uppercase;
     line-height: 1.4;
     margin-bottom: 0;
+
+    border-bottom: 1px solid $date-color;
   }
 
   &__post-list {
@@ -40,13 +42,13 @@
     }
   }
 
-  &::before {
+  &::after {
     content: '';
     display: block;
     position: absolute;
     width: 100%;
     height: 1px;
-    top: -1px;
+    bottom: 0;
     background: $date-color;
   }
 
