Next Prev links
create posts in two steps - one to get posts and one to get comics - this allows for generating accurate next prev links.

--- a/src/templates/blogTemplate.scss
+++ b/src/templates/blogTemplate.scss
@@ -37,4 +37,18 @@
       margin-bottom: 0;
     }
   }
+
+  &__nav {
+    display: flex;
+    margin-top: 90px;
+    justify-content: space-between;
+
+    &__next {
+      text-align: right;
+    }
+
+    &__previous {
+      text-align: left;
+    }
+  }
 }
